Automatically select newly created entities in the device editor